Multi pivot attach : Work Order -> Spare Parts
